<resources>
    <string name="app_name">CO2Go</string>
    <string name="see_table_view">See Table View</string>
    <string name="see_graph_view">See Graph View</string>
    <string name="back_to_main_page">Back to Main Page</string>
    <string name="notes">notes</string>
    <string name="journey_summary">Journey Summary</string>
    <string name="route">Route:</string>
    <string name="vehicle">Vehicle:</string>
    <string name="emission_g">Emission(g):</string>
    <string name="confirm">Confirm</string>
    <string name="distance_km">Distance(km):</string>
    <string name="km">km</string>
    <string name="date">Date:</string>
    <string name="test">test</string>
    <string name="testdate">testDate</string>
    <string name="testdistance">testDistance</string>
    <string name="testemission">testEmission</string>
    <string name="testroute">testRoute</string>
    <string name="testcar">testCar</string>
    <string name="route_name">Route Name</string>
    <string name="highway_distance">Highway Distance (km)</string>
    <string name="city_distance">City Distance (km)</string>
    <string name="total_distance">Total Distance (km)</string>
    <string name="save_route">Save Route</string>
    <string name="use_this_route_without_saving">Use this Route without Saving</string>
    <string name="title_activity_journey_info_activity">journey_info_activity</string>
    <string name="title_activity_journey_information">JourneyInformationActivity</string>
    <string name="add_route">Add Route</string>
    <string name="max_length_18_chars">Max Length: 18 Chars</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="select_specifications">Select Specifications</string>
    <string name="select_year">Select Year</string>
    <string name="select_model">Select Model</string>
    <string name="select_make">Select Make</string>
    <string name="add_car">Add Car</string>
    <string name="edit_route">Edit Route</string>
    <string name="max_9999km">Max: 9999 km</string>
    <string name="select_a_route_or_add_a_new">Select a route or add a new</string>
    <string name="back">Back</string>
    <string name="select_a_car_you_d_like_to_use_or_add_a_new_one">Select a car you\'d like to use or add a new one.</string>
    <string name="enter">Enter</string>
    <string name="delete_car">Delete Car</string>
    <string name="edit_car">Edit Car</string>
    <string name="select_route">Select Route</string>
    <string name="new_journey">New Journey</string>
    <string name="view_footprint">View Footprint</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel</string>
    <string name="car_details">Car Details</string>
    <string name="nickname">Nickname:</string>
    <string name="nickname2">Nickname</string>
    <string name="make">Make:</string>
    <string name="make2">Make</string>
    <string name="model">Model:</string>
    <string name="model2">Model</string>
    <string name="year">Year:</string>
    <string name="year2">Year</string>
    <string name="transmission">Transmission:</string>
    <string name="transmission2">Transmission</string>
    <string name="cylinders">Cylinders:</string>
    <string name="cylinders2">Cylinders</string>
    <string name="displacement">Displacement:</string>
    <string name="displacement2">Displacement</string>
    <string name="fuel_type">Fuel Type:</string>
    <string name="fuel_type2">Fuel Type</string>
    <string name="save_car">Save Car</string>
    <string name="save_and_use_car">Save and Use Car</string>
    <string name="save_and_use_route">Save and Use Route</string>
    <string name="select_fuel_type">Select Fuel Type</string>
    <string name="utility_starting_date">Starting Date</string>
    <string name="utility_ending_date">Ending Date</string>
    <string name="utility_num_People_in_home">Number of People in Home</string>
    <string name="save_bill">Save Bill</string>
    <string name="billStartYear">Save Bill</string>
    <string name="billStartMonth">Save Bill</string>
    <string name="billStartDay">Save Bill</string>
    <string name="billEndYear">Save Bill</string>
    <string name="billEndMonth">Save Bill</string>
    <string name="billEndDay">Save Bill</string>
    <string name="utilityUsage">Utility Usage</string>
    <string name="select_an_utility_or_add_a_new">Select an utility or add a new</string>
    <string name="add_utility">Add Utility</string>
    <string name="utility_summary">Utility Summary</string>
    <string name="utilitySummaryNickname">NickName:</string>
    <string name="utility_nickname">Nickname</string>
    <string name="utilityFuel">Fuel:</string>
    <string name="utilitySummaryFuel">Fuel</string>
    <string name="utilityStartingDate">Starting Date:</string>
    <string name="utilitySummaryStartingDate">Starting Date</string>
    <string name="utilityEndingDate">Ending Date:</string>
    <string name="utilitySummaryEndingDate">Ending Date</string>
    <string name="utilitySummaryUsage">Usage:</string>
    <string name="utilityNumPeople"># of People:</string>
    <string name="utilitySummaryNumPeople"># of People</string>
    <string name="utilitySummaryOkay">Ok</string>
    <string name="utilityNickname">Utility Nickname</string>
    <string name="edit_bill">Edit Bill</string>
    <string name="skytrain">Skytrain</string>
    <string name="bus">Bus</string>
    <string name="walk_bike">Walk / Bike</string>
    <string name="view_journeys">View Journeys</string>
    <string name="utilities">Utilities</string>
    <string name="view_tips">View Tips</string>
    <string name="click_to_edit_hold_to_delete">Click to Edit. Hold to Delete</string>
    <string name="transportation">Transportation</string>
    <string name="edit">Edit</string>
    <string name="graphModeDialog">graphModeDialog</string>
    <string name="calendarModeDialog">calendarModeDialog</string>
    <string name="graphModeDialogTitle">Graph Mode Selector</string>
    <string name="trees">Trees</string>
    <string name="units">Units</string>
    <string name="co2">CO2</string>
    <string name="website"><a href='http://www.cs.sfu.ca/CourseCentral/276/bfraser/'>Website</a></string>
    <string name="_2017_by_team_teal">© 2017 by Team Teal</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>
    <string name="generalTip1_1">Your total driving distance within last 4 weeks are\u0020</string>
    <string name="generalTip1_2">km, consider to take more bus or skytrain in the future.</string>
    <string name="generalTip2_1">Driving within the last four weeks contributes to\u0020</string>
    <string name="generalTip2_2">g CO2 emission, consider to take more bus or skytrain to lower your emission in the future.</string>
    <string name="generalTip3_1">Driving last year contributes to\u0020</string>
    <string name="generalTip4_1">Taking buses within the last four weeks contributes to\u0020</string>
    <string name="generalTip4_2">g CO2 emission, consider to take skytrain more often to lower your emission in the future.</string>
    <string name="generalTip5_1">Taking Skytrain within the last four weeks contributes to\u0020</string>
    <string name="generalTip5_2">g CO2 emission, consider to ride or walk more often to lower your emission in the future.</string>
    <string name="generalTip6_1">You have not entered any journey by bike or walk during last month, do not forget to record your journeys by bike/walk.</string>
    <string name="generalTip6_2">You have biked and walked\u0020</string>
    <string name="generalTip6_3">km within last 4 weeks, keep it up!</string>
    <string name="generalTip7_1">You have not entered any journey by bike or walk during last year, do not forget to record your journeys by bike/walk.</string>
    <string name="generalTip7_2">km over last year, keep it up!</string>
    <string name="carTip1_1">Your CO2 emission per km drive is\u0020</string>
    <string name="carTip1_2">g/km, consider to drive a more economical car.</string>
    <string name="carTip2_1">Your CO2 emission for this trip is\u0020</string>
    <string name="carTip2_2">g, consider to take bus or skytrain to reduce your emission.</string>
    <string name="carTip3_2">g, consider to ride bikes or walk to cut your emission to 0!</string>
    <string name="carTip4_1">Distance of your trip is\u0020</string>
    <string name="carTip4_2">km, consider to take bus or skytrain if possible.</string>
    <string name="carTip5_1">Your CO2 emission per km drive is\u0020</string>
    <string name="carTip5_2">km, consider to ride or walk if possible.</string>
    <string name="carTip6_1">Your total driving distance within last 4 weeks are\u0020</string>
    <string name="carTip6_2">km, consider to take more bus or skytrain in the future.</string>
    <string name="carTip7_1">Your total driving distance within last year are\u0020</string>
    <string name="busTip2_2"> km, an equivalent trip by skytrain will generate ~40% less CO2.</string>
    <string name="busTip4_1">You have traveled\u0020</string>
    <string name="busTip4_2">km by Bus within last 4 weeks, consider to take skytrain more often in the future.</string>
    <string name="busTip5_2">km by Bus within last 4 weeks, consider to ride or walk more often in the future.</string>
    <string name="busTip6_1">Taking buses within the last four weeks contributes to\u0020</string>
    <string name="busTip6_2">g CO2 emission, consider to take skytrain or bike more often in the future.</string>
    <string name="busTip7_1">Taking buses within last year contributes to\u0020</string>
    <string name="skyTrainTip3_2">g, consider to bike part of your trip to reduce your emission.</string>
    <string name="skyTrainTip4_2">km by Skytrain within last 4 weeks, consider to ride bikes or walk more often in the future.</string>
    <string name="skyTrainTip5_1">Taking Skytrain within the last four weeks contributes to\u0020</string>
    <string name="skyTrainTip6_2">km by Skytrain over the past year, consider to ride bikes or walk more often in the future.</string>
    <string name="skyTrainTip7_1">Taking Skytrain within the last year contributes to\u0020</string>
    <string name="bikeWalkTip1_1">Good job! Your trip does not generate any CO2. Keep it up!</string>
    <string name="bikeWalkTip2_1">You have biked and walked\u0020</string>
    <string name="bikeWalkTip2_2">km within last 4 weeks, keep it up!</string>
    <string name="bikeWalkTip3_2">km within last year, keep it up!</string>
    <string name="bikeWalkTip4_2">km, consider to bikes or walk more often in the future.</string>
    <string name="bikeWalkTip5_2">km by Bus over the past year, consider to bike or walk more often in the future.</string>
    <string name="utilityTip1_1">Your CO2 emission from the utility bill entered is\u0020</string>
    <string name="utilityTip1_2">g. If your heating equipment is old, consider to upgrade it to more efficient models.</string>
    <string name="utilityTip2_2">g. If you use air conditioner, consider to reduce its usage by creating better airflow in your home.</string>
    <string name="utilityTip3_2">g. Consider to turn off computers and other electronic devices when not being used.</string>
    <string name="utilityTip4_2">g. Consider to install a programmable thermostat to automatically reduce unnecessary heating.</string>
    <string name="utilityTip5_2">g. Avoid over heating your laundry and try to hang dry your laundry.</string>
    <string name="utilityTip6_2">g. If your fridge or stove is old, consider replace it with new ones with higher energy efficiency.</string>
    <string name="utilityTip7_2">g, Consider to use energy saving light bulbs wherever possible.</string>
    <string name="toolbar_add_route">Add Route</string>
    <string name="confirm_favorite"><![CDATA[Confirm & Favorite]]></string>
    <string name="select_icon">Select Icon</string>
</resources>