<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_journey_info_acticity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cmpt276.carbonTracker.JourneyInfoActivity">

    <TextView
        android:text="@string/journey_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/journeySum"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:text="@string/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/route"
        android:layout_below="@+id/car"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date"
        android:layout_marginTop="37dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/car"
        android:textSize="18sp"
        android:layout_below="@+id/date"
        android:layout_alignLeft="@+id/route"
        android:layout_alignStart="@+id/route" />

    <TextView
        android:text="@string/emission_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/emission"
        android:textSize="18sp"
        android:layout_below="@+id/distance"
        android:layout_alignLeft="@+id/distance"
        android:layout_alignStart="@+id/distance" />

    <Button
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/confirm" />

    <TextView
        android:text="@string/testcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/car"
        android:layout_alignLeft="@+id/date_entry"
        android:layout_alignStart="@+id/date_entry"
        android:id="@+id/vehicle_entry"
        android:textSize="18sp" />

    <TextView
        android:text="@string/testroute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/distance"
        android:layout_alignLeft="@+id/vehicle_entry"
        android:layout_alignStart="@+id/vehicle_entry"
        android:id="@+id/route_entry"
        android:textSize="18sp" />

    <TextView
        android:text="@string/testemission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emission"
        android:layout_alignLeft="@+id/distance_entry"
        android:layout_alignStart="@+id/distance_entry"
        android:id="@+id/emission_entry"
        android:textSize="18sp" />

    <TextView
        android:text="@string/distance_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance"
        android:layout_marginTop="39dp"
        android:textSize="18sp"
        android:layout_below="@+id/route"
        android:layout_alignLeft="@+id/route"
        android:layout_alignStart="@+id/route" />

    <TextView
        android:text="@string/testdistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance_entry"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/distance"
        android:layout_alignBottom="@+id/distance"
        android:layout_alignLeft="@+id/route_entry"
        android:layout_alignStart="@+id/route_entry" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="38dp"
        android:id="@+id/date"
        android:textSize="18sp"
        android:layout_below="@+id/journeySum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_entry"
        android:textSize="18sp"
        android:text="@string/testdate"
        android:layout_above="@+id/car"
        android:layout_toRightOf="@+id/distance"
        android:layout_toEndOf="@+id/distance"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

</RelativeLayout>
