<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_utility"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cmpt276.carbonTracker.UI.EditUtilityActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/utilityNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utilityNickname" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editUtilityNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/max_length_18_chars"
                android:inputType="textCapWords"
                android:maxLength="18" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSelectMake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_fuel_type" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinnerSelectResource"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/utilityUsageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utilityUsage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextUtilityUsage_EditUtility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSelectModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_starting_date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerEditUtilityStartYear"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27"
                    android:prompt="@string/billStartYear" />

                <Spinner
                    android:id="@+id/spinnerEditUtilityStartMonth"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/billStartMonth" />

                <Spinner
                    android:id="@+id/spinnerEditUtilityStartDay"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/billStartDay" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSelectYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_ending_date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerEditUtilityEndYear"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27"
                    android:prompt="@string/billEndYear" />

                <Spinner
                    android:id="@+id/spinnerEditUtilityEndMonth"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/billEndMonth" />

                <Spinner
                    android:id="@+id/spinnerEditUtilityEndDay"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/billEndDay" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/utility_num_People_in_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_num_People_in_home" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText_Utility_Num_People"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonEditBillSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCancelEditBill"
        android:layout_alignBottom="@+id/buttonCancelEditBill"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/edit_bill" />

    <Button
        android:id="@+id/buttonCancelEditBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:text="@string/cancel" />

</RelativeLayout>